--- a/documents/_assets/preambulo.tex
+++ b/documents/_assets/preambulo.tex
@@ -70,6 +70,7 @@
 \@ifclassloaded{article}{
   \newtheorem{teo}{Teorema}[section]
 }{
+  \theoremstyle{definition}
   \newtheorem{teo}{Teorema}[chapter]  % Se resetea en cada chapter
 }
 \makeatother
