--- a/documents/Probabilidad/Ejercicios_Clase_1.tex
+++ b/documents/Probabilidad/Ejercicios_Clase_1.tex
@@ -1,5 +1,3 @@
-\chapter{Trabajos de clase}
-
 \section{Trabajo de clase del lunes 23 de Septiembre de 2024}
 
 \begin{ejercicio} Sea el experimento de lanzar un dado perfecto de 6 caras. Obtener:
@@ -108,7 +106,7 @@
         F(x) = \left\{
             \begin{array}{ccc}
                 0 & \text{si} & 1 \leq x < 1\\
-                \int\limits_1^x \dfrac{\frac{8}{7}}{t^2} = \dfrac{8}{7} \left(1 - \dfrac{1}{x}\right) & \text{si}& x \in [1,8[]\\
+                \int\limits_1^x \dfrac{\frac{8}{7}}{t^2} = \dfrac{8}{7} \left(1 - \dfrac{1}{x}\right) & \text{si}& x \in [1,8[\\
             \end{array}
             \right.
     \end{gather*}
