--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -15,5 +15,9 @@
     \newpage
     \thispagestyle{empty}
 
-    \input{Tema_0.tex}
+    \chapter{Trabajos de clase}
+
+    \input{Ejercicios_Clase_1.tex}
+    \newpage
+    \input{Ejercicios_Clase_2.tex}
 \end{document}
