--- a/documents/Topología_I/Tema_1.tex
+++ b/documents/Topología_I/Tema_1.tex
@@ -3,45 +3,50 @@
 \chapter{Espacios Topológicos}
 
 \begin{definicion}
-    Un \textbf{espacio topológico} es una par $(X, \cc{T})$, donde $X \neq \emptyset$ es un conjunto y $\cc{T}\subset\cc{P}(X)$ es una familia de subconjuntos de $X$.
+    Un \textbf{espacio topológico} es una par $(X, \cc{T})$, donde $X \neq \emptyset$ es un conjunto y $\cc{T}\subset\cc{P}(X)$ es una familia de subconjuntos de $X$. Esta familia $\cc{T}$ tiene las siguientes propiedades:
 
     \begin{enumerate}
-        \item[\textbf{(\hypertarget{A1}{A1})}] $\emptyset, X \in \cc{T}$.
-        \item[\textbf{(\hypertarget{A2}{A2})}] Si $\{U_i\}_{i\in I} \subset \cc{T}$, entonces $\bigcup\limits_{i\in I} U_i \in \cc{T}$.
-        \item[\textbf{(\hypertarget{A3}{A3})}] Si $U_1, U_2 \in \cc{T}$, entonces $U_1 \cap U_2 \in \cc{T}$.
+        \item[\objetivo{A1}] $\emptyset, X \in \cc{T}$.
+        \item[\objetivo{A2}] Si $\{U_i\}_{i\in I} \subset \cc{T}$, entonces $\cuptext{i\in I} U_i \in \cc{T}$ (unión arbitraria\footnote{Puede ser finita o infinita, numerable o no numerable}).
+        \item[\objetivo{A3}] Si $U_1, U_2 \in \cc{T}$, entonces $U_1 \cap U_2 \in \cc{T}$.
     \end{enumerate}
 
     A la familia $\cc{T}$ se le llama \textbf{topología} en el conjunto $X$. A los elementos de $\cc{T}$ se les llama \textbf{abiertos} en el espacio topológico $(X, \cc{T})$.
+    \endsquare
 \end{definicion}
 
-\vspace*{0.5cm}
-
 \begin{observacion}
-    De \hyperlink{A1}{\textbf{(A1)}} podemos concretar que si $U_1, \dots, U_k \in \cc{T}$, entonces \smash{$\bigcap\limits_{i=1}^{\infty}U_i \in \cc{T}$}.
-    En general, si $\{U_i\}_{i=1}^{\infty}\in \cc{T}$, entonces $\bigcup\limits_{i=1}^{\infty}$ no tiene por qué ser abierto.
+    De \apuntar{A3} podemos concretar que si $U_1, \dots, U_k \in \cc{T}$, entonces $\bigcap\limits_{i=1}^{k}U_i \in \cc{T}$, es decir, que la intersección finita de abiertos es abierto (se prueba con una inducción trivial).
+
+    En general, si $\{U_i\}_{i=1}^{\infty}\in \cc{T}$, entonces $\bigcup\limits_{i=1}^{\infty}U_i$ no tiene por qué ser abierto.
+    \endsquare
 \end{observacion}
 
 \begin{ejemplo}\ 
     \begin{itemize}
         \item \textbf{Topología trivial:} Sea $X \neq \emptyset$, $\cc{T}_t = \{\emptyset, X\} \Rightarrow (X, \cc{T}_t)$ es un e.t\footnote{A partir de ahora notaremos así a un espacio topológico}.
         \item \textbf{Topología discreta:} Sea $X \neq \emptyset$, $\cc{T}_{disc}= \cc{T}_{D} = \cc{P}(X) \Rightarrow (X, \cc{T}_D)$ es un e.t.
-        \item \textbf{Topología del punto incluido:} Sea $X \neq \emptyset$, $x_0\in X$ $\cc{T}_{x_0} = \{\emptyset\}\cup \{U \subset X : x_0 \in U\} \Rightarrow (X, \cc{T}_{x_0})$ es un e.t.
-        \item \textbf{Topología cofinita:} (o topología de los complementos finitos) Sea $X \neq \emptyset$, $\cc{T}_{CF} = \{\emptyset\}\cup\{U\subset X : X \setminus U \text{ es finito}\} \Rightarrow (X, \cc{T}_{CF})$ es un e.t.
-        \begin{gather*}
-            X \setminus \left(\bigcup\limits_{i\in I}U_i\right) = \bigcap\limits_{i\in I}(X \setminus U_i) \text{(intersección de finitos es finito)}\\
-            X \setminus (U_1 \cap U_2) = (X\setminus U_1) \cup (X \setminus U_2)\text{(unión de finitos es finito)}
-        \end{gather*}
+        \item \textbf{Topología del punto incluido:} Sea $X \neq \emptyset$, $x_0\in X$,
+        
+        $\cc{T}_{x_0} = \{\emptyset\}\cup \{U \subset X : x_0 \in U\} \Rightarrow (X, \cc{T}_{x_0})$ es un e.t.
+        \item \textbf{Topología cofinita:} (o topología de los complementos finitos) Sea $X \neq \emptyset$,
+        
+        $\cc{T}_{CF} = \{\emptyset\}\cup\{U\subset X : X \setminus U \text{ es finito}\} \Rightarrow (X, \cc{T}_{CF})$ es un e.t. (por las leyes de Morgan)
+        \begin{align*}
+            X \setminus \left(\bigcup\limits_{i\in I}U_i\right) &= \bigcap\limits_{i\in I}(X \setminus U_i) \text{(intersección de finitos es finito)}\\
+            X \setminus (U_1 \cap U_2) &= (X\setminus U_1) \cup (X \setminus U_2)\text{(unión de finitos es finito)}
+        \end{align*}
         \item \textbf{Topología conumerable:} (o topología de los complementos numerables) Sea $X \neq \emptyset$, $\cc{T}_{CF} = \{\emptyset\}\cup\{U\subset X : X \setminus U \text{ es numerable}\} \Rightarrow (X, \cc{T}_{CF})$ es un e.t.
         \item $\bb{R}$, $ \cc{T}=\{\emptyset, \bb{R}, \bb{Q}, \bb{R}\setminus \bb{Q}\}, \Rightarrow (\bb{R}, \cc{T})$ es un e.t. 
         \item \textbf{Topología de Sierpinski:} $X=\{a,b\}$, $\cc{T}=\{\emptyset, \{a\}, X\} \Rightarrow (X, \cc{T})$ es un e.t.
         \item \textbf{Topología de Sorgenfrey:} $X=\bb{R}$, $\cc{T}_S$, $U\in \cc{T}_S \sii \forall x \in U \ \  \exists \veps > 0 \text{ tal que } [x, x+\veps) \subset U$. (es un caso particular del punto incluido, $\cc{T}_a$).
     \end{itemize}
+    \endsquare
 \end{ejemplo}
-
-\newpage
 
 \begin{observacion}
     En $X=\{x\}$ solo existe una topología, $\cc{T}=\{\emptyset, \{x\}\}$ (todas las topologías son la misma).
+    \endsquare
 \end{observacion}
 
 \begin{ejercicio}
@@ -55,6 +60,7 @@
         \item Punto incluido (a): $\cc{T}_a = \{\emptyset, \{a\}, X\}$
         \item Punto incluido (b): $\cc{T}_b = \{\emptyset, \{b\}, X\}$
     \end{itemize}
+    Cualquier otra topología que se pueda construir sobre este conjunto coicidirá con alguna de las anteriores.
     \endsquare
 \end{ejercicio}
 
@@ -72,23 +78,24 @@
 
 \begin{definicion}
     Un \textbf{espacio métrico} es un par $(X, d)$ donde $X \neq \emptyset$ es un conjunto y $d: X \times X \rightarrow \bb{R}$ es una aplicación que verifica:
+
+    \begin{enumerate}
+        \item [\objetivo{D1}] $d(x, y) \geq 0$\ \ $\forall x,y \in X$. Además, $d(x,y)= 0 \sii x=y$.
+        \item [\objetivo{D2}] (simetría) $d(x,y)=d(y,x)$ $\forall x, y, \in X.$
+        \item [\objetivo{D3}] (desigualdad triangular) $d(x,z) \leq d(x,y) + d(y,z)$\ \ $\forall x,y,z \in X$
+    \end{enumerate}
+
+    A la aplicación $d$ la llamaremos \textbf{distancia}.
+    \endsquare
 \end{definicion}
-
-\begin{enumerate}
-    \item [\textbf{(\hypertarget{D1}{D1})}] $d(x, y) \geq 0$\ \ $\forall x,y \in X$. Además, $d(x,y)= 0 \sii x=y$.
-    \item [\textbf{(\hypertarget{D2}{D2})}] (simetría) $d(x,y)=d(y,x)$ $\forall x, y, \in X.$
-    \item [\textbf{(\hypertarget{D3}{D3})}] (desigualdad triangular) $d(x,z) \leq d(x,y) + d(y,z)$\ \ $\forall x,y,z \in X$
-\end{enumerate}
-
-A la aplicación $d$ la llamaremos \textbf{distancia}.
 
 \begin{ejercicio}
     % (D2) + (D3) + 2ª parte de (D1) se deduce 1ª parte de (D1) luego $d:X \times X \rightarrow [0, \infty)$
-    Demostrar que a partir de las propiedades \hyperlink{D2}{\textbf{(D2)}}, \hyperlink{D3}{\textbf{(D3)}} y la segunda parte de \hyperlink{D1}{\textbf{(D1)}} se puede deducir la primera parte de \hyperlink{D1}{\textbf{(D1)}}, y como consecuencia se tiene $d:X \times X \rightarrow [0, \infty)$.\\
+    Demostrar que a partir de las propiedades \apuntar{D2}, \apuntar{D3} y la segunda parte de \apuntar{D1} se puede deducir la primera parte de \apuntar{D1}, y como consecuencia se tiene $d:X \times X \rightarrow [0, \infty)$.\\
 
     Para cualesquiera $x,y \in X$, tenemos:
     \begin{gather*}
-        0 \overset{\apuntar{D1}{(2)}}{=} d(x,x) \overset{\apuntar{D3}}{\leq} d(x,y) + d(y,x) \overset{\apuntar{D2}}{=} d(x,y) + d(x,y) = 2 d(x,y)
+        0 \overset{\apuntar{D1}{(2)}}{\vphantom{\leq}=} d(x,x) \overset{\apuntar{D3}}{\leq} d(x,y) + d(y,x) \overset{\apuntar{D2}}{\vphantom{\leq}=} d(x,y) + d(x,y) = 2 d(x,y)
     \end{gather*}
     De donde podemos deducir
     \begin{gather*}
@@ -96,11 +103,10 @@ A la aplicación $d$ la llamaremos \textbf{distancia}.
     \end{gather*}
 
     \endsquare
-        
 \end{ejercicio}
 
 \begin{definicion}
-    $(X,d)$ e.m.\footnote{espacio métrico} $x \in X$, $r >0$, se definen:
+    $(X,d)$ e.m.\footnote{A partir de ahora notaremos así a un espacio métrico} $x \in X$, $r >0$, se definen:
 
     \begin{itemize}
         \item La \textbf{bola (abierta)} de centro $x$ y radio $r$ como 
@@ -116,14 +122,17 @@ A la aplicación $d$ la llamaremos \textbf{distancia}.
             S(x, r) = \{y \in X : d(x,y) = r\} \subset X
         \end{gather*}
     \end{itemize}
+    \endsquare
 \end{definicion}
 
-Algunas propiedades que se deducen de la definición anterior son:
-\begin{itemize}
-    \item $\overline{B}(x, r) = B(x,r) \cup S(x,r)$
-    \item $S(x,r) = \overline{B}(x, r) \setminus B(x,r)$
-    \item Si $s<r$, entonces $\overline{B}(x, x) \subset B(x,r)$
-\end{itemize}
+\begin{propiedades} De las definiciones anteriores se deducen las siguientes propiedades:
+    \begin{itemize}
+        \item $\overline{B}(x, r) = B(x,r) \cup S(x,r)$
+        \item $S(x,r) = \overline{B}(x, r) \setminus B(x,r)$
+        \item Si $s<r$, entonces $\overline{B}(x, x) \subset B(x,r)$
+    \end{itemize}
+    \endsquare
+\end{propiedades}
 
 \begin{ejemplo}(Espacio euclídeo $\bb{R}^n$)
     En $\bb{R}^n$ consideramos la \textbf{distancia usual}, 
@@ -204,10 +213,11 @@ Algunas propiedades que se deducen de la definición anterior son:
             \node at (5,-2.25) {\small{$S(x,r) \equiv$ esfera}};
         \end{tikzpicture}
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{ejemplo}
-    $X \neq \emptyset$ se define la \textbf{distancia discreta} como 
+    En un conjunto $X \neq \emptyset$, se define la \textbf{distancia discreta} como 
     \begin{align*}
         d_{disc}(x,y) &=
         \left\{ 
@@ -241,18 +251,21 @@ Algunas propiedades que se deducen de la definición anterior son:
         \end{array}
         \right.
     \end{align*}
+    \endsquare
 \end{ejemplo}
 
 
 \begin{ejemplo}\
     \begin{itemize}
-        \item Si $d$ es una distancia en $X$ y $\lambda > 0$, entonces $\lambda \cdot d : X \times X \rightarrow [0,\infty)$ también es una distancia y $B_{\lambda d}(x,r) = B_d(x, \dfrac{r}{\lambda})$
-        \item Sean $d$ y $\tilde{d}$ distancias en $X$ y $d \leq \tilde{d}$, entonces $B_d(x,r) \geq B_{\tilde{d}}(x,r)$
+        \item Si $d$ es una distancia en $X$ y $\lambda > 0$, entonces $\lambda \cdot d : X \times X \rightarrow [0,\infty)$ también es una distancia y $B_{\lambda d}(x,r) = B_d\left(x, \dfrac{r}{\lambda}\right)$.
+        \item Sean $d$ y $\tilde{d}$ distancias en $X$ y $d \leq \tilde{d}$, entonces $B_d(x,r) \geq B_{\tilde{d}}(x,r)$.
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{definicion}
     $(X,d)$ e.m. Un subconjunto $U \subset X$ se dice \textbf{abierto métrico} si $U=\emptyset$ o si $\forall x \in U, \ \ \exists r > 0$ tal que $B(x,r) \subset U$.
+    \endsquare
 \end{definicion}
 
 \begin{prop} %proposicion
@@ -263,27 +276,28 @@ Algunas propiedades que se deducen de la definición anterior son:
     es una topología en $X$ que llamamos la \textbf{topología métrica} en $(X,d)$.
 
     \begin{proof}\
+        Veamos que $\cc{T}_d$ así definida verifica las propiedades de una topología:
         \begin{enumerate}[label=(A\arabic*)]
-            \item $\emptyset$, $X\in \cc{T}_d$ trivialmente.
-            \item Sea $\{U_i\}_{i\in I}\subset \cc{T}_d$. ¿$\bigcup\limits_{i\in I}U_i \in \cc{T}_d$?
+            \item $\emptyset$, $X\in \cc{T}_d$ trivialmente (ya que $X\subset X$).
+            \item Sea $\{U_i\}_{i\in I}\subset \cc{T}_d$. Tendremos que ver si se verifica que $\bigcup\limits_{i\in I}U_i \in \cc{T}_d$. Para ello estudiemos los dos casos posibles:
             
             Si $\bigcup\limits_{i\in I}U_i = \emptyset \Rightarrow \bigcup\limits_{i\in I}U_i \in \cc{T}_d$.
 
-            Supongamos $\bigcup\limits_{i\in I}U_i \neq \emptyset$. Sea $x \in \bigcup\limits_{i\in I}U_i \Rightarrow \exists i \in I : x \in U_i \in \cc{T}_d \Rightarrow \exists r>0 : B(x,r) \subset U_i \subset \bigcup\limits_{i\in I}U_i \Rightarrow \bigcup\limits_{i\in I}U_i\in \cc{T}$.
+            Si $\bigcup\limits_{i\in I}U_i \neq \emptyset$, entonces podemos considerar $x \in \bigcup\limits_{i\in I}U_i \Rightarrow \exists i \in I : x \in U_i \in \cc{T}_d \Rightarrow \exists r>0 : B(x,r) \subset U_i \subset \bigcup\limits_{i\in I}U_i \Rightarrow \bigcup\limits_{i\in I}U_i\in \cc{T}$.
 
-            \item Sean $U_1, U_2 \in \cc{T}_d$. ¿$U_1 \cap U_2 \in \cc{T}_d$?
+            \item Sean $U_1, U_2 \in \cc{T}_d$. ¿Se verifica que $U_1 \cap U_2 \in \cc{T}_d$? De nuevo veamos los casos posibles:
             
-            Si $U_1 \cap U_2 = \emptyset$ se verifica.
+            Si $U_1 \cap U_2 = \emptyset$, entonces se verifica trivialmente.
 
-            Supongamos $U_1 \cap U_2 \neq \emptyset$. Entonces puedo considerar $x\in U_1 \cap U_2 \Rightarrow \exists r_1,r_2>0: B(x,r_1)\subset U_1$ y $B(x,r_2)\subset U_2 \Rightarrow B(x, \min\{r_1, r_2\}) \subset U_1 \cap U_2$
+            Si $U_1 \cap U_2 \neq \emptyset$, entonces podemos considerar $x\in U_1 \cap U_2 \Rightarrow \exists r_1,r_2>0: B(x,r_1)\subset U_1$ y $B(x,r_2)\subset U_2 \Rightarrow B(x, \min\{r_1, r_2\}) \subset U_1 \cap U_2$, es decir existe una bola abierta en la intersección que contiene al punto luego $U_1 \cap U_2 \in \cc{T}_d$.
         \end{enumerate}
     \end{proof}
-
 \end{prop}
 
 \begin{definicion}
     Se llama \textbf{topología usual de $\bb{R}^n$}, $\cc{T}_u$, a la topología métrica en $\bb{R}^n$ con la distancia usual, es decir,
     $U \subset \bb{R}^n$ es abierto en $(\bb{R}^n, \cc{T}_u)$ si $U=\emptyset$ o si $\forall x \in U \ \ \exists r>0 : B(x,r) \subset U$.
+    \endsquare
 \end{definicion}
 
 \begin{prop}
@@ -336,6 +350,7 @@ Algunas propiedades que se deducen de la definición anterior son:
     \begin{gather*}
         \cc{T}_d=\{\emptyset\}\cup\{U \subset X : U \text{ es unión de bolas abiertas}\}
     \end{gather*}
+    \endsquare
 \end{coro}
 
 \begin{ejemplo}\
@@ -346,6 +361,7 @@ Algunas propiedades que se deducen de la definición anterior son:
         \item En $(X, d)$, en general la intersección infinita de abiertos no es abierto. Por ejemplo, $\bigcap\limits_{n\in \bb{N}}\left(\frac{-1}{n}, \frac{1}{n}\right) = \{0\}$ que no es abierto.
         \item $X\neq \emptyset$, $\cc{T}_{d_{disc}}=\cc{T}_{disc}$ (la topología asociada a la distancia discreta es la distancia discreta).
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{definicion}
@@ -353,6 +369,7 @@ Algunas propiedades que se deducen de la definición anterior son:
     \begin{gather*}
         a \cdot d_1(x,y) \leq d_2(x,y) \leq b \cdot d_1(x,y) \ \ \ \forall x,y \in X
     \end{gather*}
+    \endsquare
 \end{definicion}
 
 \begin{prop}
@@ -362,13 +379,13 @@ Algunas propiedades que se deducen de la definición anterior son:
     \begin{proof}
         Sea $U\in \cc{T}_{d_1}$, $U \neq \emptyset$, ¿$U\in \cc{T}_{d_2}$?
 
-        Sea $x \in U \in \cc{T}_{d_1} \Rightarrow \exists r>0: B_{d_1}(x,r)\subset U$. Como $a \cdot d_1 \leq d_2 \Rightarrow B_{d_2}(x,a\cdot r)\subset B_{d_1}(x,r)$. Para verlo sea $y\in B_{d_2}(x,a\cdot r) \Rightarrow d_2(x,y)<a\cdot r \Rightarrow a \cdot d_1(x,y)<r \Rightarrow y \in B_{d_1}(x,r)$. Por tanto $B_{d_1}(x,r)\subset U \Rightarrow U \in \cc{T}_{d_2}\Rightarrow T_{d_1}\subset \cc{T}_{d_2}$.
-        
+        Sea $x \in U \in \cc{T}_{d_1} \Rightarrow \exists r>0: B_{d_1}(x,r)\subset U$. Como $a \cdot d_1 \leq d_2 \Rightarrow B_{d_2}(x,a\cdot r)\subset B_{d_1}(x,r)$. Para verlo, tomamos $y\in B_{d_2}(x,a\cdot r) \Rightarrow d_2(x,y)<a\cdot r \Rightarrow a \cdot d_1(x,y)<r \Rightarrow y \in B_{d_1}(x,r)$. Por tanto, $B_{d_1}(x,r)\subset U \Rightarrow U \in \cc{T}_{d_2}\Rightarrow T_{d_1}\subset \cc{T}_{d_2}$.\\
     \end{proof}
 \end{prop}
 
 \begin{definicion}
     Un e.t. $(X,\cc{T})$ se dice \textbf{metrizable} si existe una distancia $d$ en $X$ tal que $\cc{T}= \cc{T}_d$.
+    \endsquare
 \end{definicion}
 
 \begin{ejemplo}\ 
@@ -376,13 +393,17 @@ Algunas propiedades que se deducen de la definición anterior son:
         \item $(\bb{R}^n, \cc{T}_u)$ es metrizable.
         \item $(X, \cc{T}_{disc})$ es metrizable.
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{ejercicio}
     Si $(X,\cc{T})$ es un e.t. metrizable, entonces cumple la condición de Hausdorff:
     \begin{gather*}
-        \forall x,y\in X, x\neq y, \ \ \exists U,V \in \cc{T} : U \cap V = \emptyset
+        \forall x,y\in X, x\neq y, \ \ \exists U,V \in \cc{T} \text{ tal que }x\in U,\ y\in V \text{ y } U \cap V = \emptyset
     \end{gather*}
+
+    Por ser metrizable, sabemos que $\cc{T}=\cc{T}_d$ donde $d:X \to [0,\infty)$ es una distancia. Por tanto, para cada $x,y\in X$ con $x\neq y$ tengo $d(x,y)>0$. Puedo considerar entonces $r=\dfrac{d(x,y)}{2}$. Tengo entonces $U=B(x,r)$ y $V=B(y,r)$. Es claro que $x\in U$ y $y\in V$. Veamos que $U$ y $V$ son disjuntos. Tengo $U\cap V =\{z\in X : d(z,x)<r ,d(z,y)<r\}$. Supongamos que este conjunto no es vacío, en cuyo caso tendría que $\exists z \in X$ tal que $d(z,x)<r$ y $d(z,y)<r$. Por tanto, $d(z,x)+d(z,y)<2r = d(x,y)$ lo cual incumple la desigualdad triangular. Llegamos a contradicción y por tanto $U\cap V=\emptyset$.
+    \endsquare
 \end{ejercicio}
 
 \begin{ejemplo}\
@@ -395,11 +416,13 @@ Algunas propiedades que se deducen de la definición anterior son:
         \item La topología de Sierpinski tampoco es metrizable (ya que el único abierto que contiene a $b$ es el total).
         \item La topología de Sorgenfrey $(\bb{R}, \cc{T}_S)$ cumple la propiedad de Hausdorff.
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \section{Comparación de Topologías}
 \begin{definicion}
     Sean $X\neq \emptyset$ un conjunto y $\cc{T}_1$, $\cc{T}_2$ dos topologías en $X$. Diremos que $\cc{T}_2$ es \textbf{más fina} que $\cc{T}_1$ o que $\cc{T}_1$ es \textbf{menos fina} que $\cc{T}_2$ si $\cc{T}_1\subseteq \cc{T}_2$ y lo notamos como $\cc{T}_1 \leq \cc{T}_2$.
+    \endsquare
 \end{definicion}
 
 \begin{ejemplo}\
@@ -419,21 +442,24 @@ Algunas propiedades que se deducen de la definición anterior son:
         \item En $\bb{R}$, $\cc{T}_u\leq \cc{T}_{Sorgenfrey}$.
         \item $(X,d)$, $(X,d')$, $d \leq d' \Rightarrow \cc{T}_d \leq \cc{T}_{d'}$.
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \section{Cerrados}
 
 \begin{definicion}
     Sea $(X,\cc{T})$ un e.t. Diremos que un conjunto $F\subset X$ es \textbf{cerrado} en $(X,\cc{T})$ si $X\subset F \in \cc{T}$. Denotamos por $\cc{C}_{\cc{T}}$ a la familia de todos los cerrados en $(X,\cc{T})$.
+    \endsquare
 \end{definicion}
 
-Algunas propiedades son 
-\begin{enumerate}
-    \item[\objetivo{C1}] $\emptyset, X \in \cc{C}_{\cc{T}}$.
-    \item[\objetivo{C2}] Si $\{F_i\}_{i\in I}\subset \cc{C}_{\cc{T}}$, entonces $\bigcap\limits_{i\in I}F_i \in \cc{C}_{\cc{T}}$.
-    \item[\objetivo{C3}] Si $F_1, F_2" \in \cc{C}_{\cc{T}}$, entonces $F_1 \cup F_2 \in \cc{C}_{\cc{T}}$
-\end{enumerate}
-Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerrada.\\
+\begin{propiedades}\ 
+    \begin{enumerate}
+        \item[\objetivo{C1}] $\emptyset, X \in \cc{C}_{\cc{T}}$.
+        \item[\objetivo{C2}] Si $\{F_i\}_{i\in I}\subset \cc{C}_{\cc{T}}$, entonces $\bigcap\limits_{i\in I}F_i \in \cc{C}_{\cc{T}}$.
+        \item[\objetivo{C3}] Si $F_1, F_2" \in \cc{C}_{\cc{T}}$, entonces $F_1 \cup F_2 \in \cc{C}_{\cc{T}}$
+    \end{enumerate}
+    Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerrada.\\
+\end{propiedades}
 
 \begin{observacion}\
     \begin{itemize}
@@ -443,6 +469,7 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
         \item En $(X, \cc{T}_{x_0})$ tenemos que $\cc{T}_{x_0}\cup \cc{C}_{\cc{T}_{x_0}} = \cc{P}(X)$ y además $\cc{T}_{x_0}\cap \cc{C}_{\cc{T}_{x_0}}=\{\emptyset, X\}$.
         \item En general, la unión arbitraria de cerrados no es cerrado. Por ejemplo, $(\bb{R}, \cc{T}_u)$, tomamos $\bigcup\limits_{n\in \bb{N}}\left[-\frac{1}{n}, 3-\frac{1}{n}\right] = (0,3)$. Otro ejemplo sería $(\bb{R}, \cc{T}_{CF})$ considerando $\bigcup\limits_{n\in \bb{N}}\{n\}=\bb{N}$ que no es cerrado.
     \end{itemize}
+    \endsquare
 \end{observacion}
 \begin{ejemplo}\
     \begin{itemize}
@@ -452,6 +479,7 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
         \item Topología cofinita: $\cc{T}_{CF} = \{\emptyset\}\cup \{U\subset X : X \setminus U \text{ finito }\} \Rightarrow \cc{C}_{\cc{T}_{CF}}=\cc{C}_{CF}=\{X\}\cup \{F\subset X : F \text{ finito}\}$
         \item En ocasiones no es fácil describir $\cc{C}_{\cc{T}}$. Por ejemplo en $\cc{T}_u$ o $\cc{T}_{Sorgenfrey}$.
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{ejemplo} En un espacio métrico $(X, \cc{T}_d)$, las bolas cerradas y las esferas son cerrados.
@@ -461,29 +489,27 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
             
             Sea $y \in X\setminus\overline{B}(x,r) \Rightarrow d(x,y>r)$. Entonces $\exists \veps >0 : r+\veps < d(x,y)\Rightarrow B(y,\veps)\cap \overline{B}(x,r)=\emptyset \Rightarrow B(y,\veps)\subset X\setminus \overline{B}(x,r)\in \cc{T}_d \Rightarrow X\setminus \overline{B}(x,r)\in \cc{C}_{\cc{T}}$
 
-            % \begin{tikzpicture}
-            %     \centering
-    
-            %     \def\radius{1}
-            %     \def\incolor{gray!20}
-            %     \def\angulo{45}
-    
-            %     % Desactiva los caracteres conflictivos
-            %     \shorthandoff{>} % Para poner puntas de flecha
-    
-            %     \filldraw[fill=\incolor, thick] (0,0) circle (\radius);
-            %     \filldraw (0,0) circle (1.5pt)  node[below] {$x$};
-            %     \draw[thick, ->] (0,0) -> ({sin(\angulo)*\radius}, {cos(\angulo)*\radius}) node[midway, below] {$r$};
-    
-            % \end{tikzpicture}
-
             \item Sea $x\in X$, $r>0, $¿$S(x,r)\in \cc{C}_d$? Dado que $X\setminus S(x,r)=B(x,r)\cup (X\setminus \overline{B}(x,r))\in \cc{T}_d$ (por ser unión de abiertos).
         \end{itemize}
     \end{proof}
 \end{ejemplo}
 
 \begin{ejercicio}
-    En $(\bb{R},\cc{T}_u)$ los únicos intervalos cerrados son los de la forma $]-\infty, a]$, $[b, +\infty[$, $\bb{R}=]-\infty, +\infty[$ y $[a,b]$ con $a<b$.
+    En $(\bb{R},\cc{T}_u)$ los únicos intervalos cerrados son los de la forma $(-\infty, a]$, $[b, +\infty)$, $\bb{R}=(-\infty, +\infty)$ y $[a,b]$ con $a<b$.\\
+
+    Sabemos que los únicos abiertos en $\cc{T}_u$ son los intervalos de la forma $\bb{R}=(-\infty, +\infty)$, $(a,b)$ con $a<b$, $(-\infty, a)$ y $(b, +\infty)$.
+
+    Es claro que $\bb{R}\in \cc{C}_{\cc{T}_u}$. 
+    
+    Tenemos que $\bb{R}\setminus(-\infty,a] = (a,+\infty)\in \cc{T}_u$, luego $(-\infty,a]\in \cc{C}_{\cc{T}_u}$. 
+    
+    De la misma forma, $\bb{R}\setminus[b,+\infty) = (-\infty,b)\in \cc{T}_u$, luego $[b,+\infty)\in \cc{C}_{\cc{T}_u}$
+
+    Finalmente $\bb{R}\setminus [a,b]=(-\infty,a)\cup(b,+\infty)\in \cc{T}_u$ por ser unión de abiertos luego $[a,b]\in \cc{C}_{\cc{T}_u}$.
+
+    Dado que ya han aparecido todos los tipos posibles de intervalos en $\bb{R}$, no habrá más intervalos cerrados que los ya mencionados (ya que cualquier otro tipo de intervalo es abierto).
+
+    \endsquare
 \end{ejercicio}
 
 \begin{teo}
@@ -508,6 +534,7 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
     Sea $(X,\cc{T})$ un e.t. Una familia de abiertos $\cc{B}\subset \cc{T}$ es una \textbf{base} de la topología $\cc{T}$ si $\forall U \in \cc{T}$\ \ \ $\exists \{B_i\}\subset \cc{B}$ tal que $U=\bigcup\limits_{i\in I}B_i$.
 
     A los elementos de $\cc{B}$ se les llama \textbf{abiertos básicos}.
+    \endsquare
 \end{definicion}
 
 \begin{observacion}\
@@ -517,13 +544,14 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
         \item $\cc{T}$ es base de $\cc{T}$ (trivialmente).
         \item Si $\cc{B}\subset \cc{B}'\subset \cc{T}$ con $\cc{B}$, entonces $\cc{B}'$ es base de $\cc{T}$.
     \end{itemize}
+    \endsquare
 \end{observacion}
 
 \begin{prop}
     Sea $(X,\cc{T})$ un e.t y $\cc{B}\subset \cc{T}$ una familia de abiertos. Son equivalentes:
     \begin{enumerate}
         \item[(i)] $\cc{B}$ es base de $\cc{T}$.
-        \item[(ii)] $\forall U \in \cc{T}$,\ \ $U \neq \emptyset$\ \ $\forall x\in U$\ \ $\exists B \in \cc{B}$ tal que $x\in B \subset U$. 
+        \item[(ii)] $\forall U \in \cc{T}$,\ \ $U \neq \emptyset$\ \ $\forall x\in U$\ \ $\exists B \in \cc{B}$ tal que $x\in B \subset U$ (si tenemos un abierto de la topología podemos encontrar para cada punto suyo un abierto básico contenido en el abierto y que contiene al punto).
     \end{enumerate}
 
     \begin{proof}\
@@ -553,19 +581,20 @@ Por inducción, de \apuntar{C3} tenemos que la unión finita de cerrados es cerr
         \item $(X, \cc{T}_{x_0})$, $x_0 \in X \neq \emptyset$, $\cc{B}=\{\{x,x_0\}: x\in X\}$ es una base. Esta es la base más económica.
         \item $(\bb{R}, \cc{T}_{Sorgenfrey})$ (recordemos que $U \in \cc{T}_S \sii \forall x \in U,\ \ \exists \veps : [x, x+\veps)\subset U$). $\cc{B}=\{[x,x+\veps): x\in \bb{R}, \veps>0\}$ es base. $\cc{B}'=\{[x,x+\veps): x\in \bb{Q}, \veps\in \bb{Q}, \veps>0\}$ no lo es (ya que tomando un intervalo de la forma $[x,x+\veps)$ con $x\in \bb{Q}$ entonces no existe ningún elemento de $\cc{B}'$ que contenga a $x$ y quede enmedio).
     \end{itemize}
+    \endsquare
 \end{ejemplo}
 
 \begin{teo}
-    Sea $(X,\cc{T})$ un espacio topológico con base $\cc{B}$. Entonces:
+    Sea $(X,\cc{T})$ un espacio topológico y $\cc{B}$ una base suya. Entonces:
     \begin{enumerate}
         \item[\objetivo{B1}] $X=\bigcup\limits_{B\in \cc{B}}B$
-        \item[] Si $B_1,B_2\in \cc{B}$,\ $x\in B_1\cap B_2$, entonces $\exists B_3 \in \cc{B}$ con $x\in B_3 \subset B_1 \cap B_2$
+        \item[\objetivo{B2}] Si $B_1,B_2\in \cc{B}$,\ $x\in B_1\cap B_2$, entonces $\exists B_3 \in \cc{B}$ con $x\in B_3 \subset B_1 \cap B_2$
     \end{enumerate}
 
-    \begin{proof}
+    \begin{proof}\
         \begin{enumerate}
-            \item Trivial
-            \item Trivial. $x\in B_1\cap B_2\in \cc{T}$ entonces, como $\cc{B}$ es base $\exists B_3=B_x \in \cc{B}$ con $x\in B_3 \subset B_1 \cap B_2$.
+            \item[\apuntar{B1}] Trivial
+            \item[\apuntar{B2}] Tenemos $x\in B_1\cap B_2\in \cc{T}$ entonces, como $\cc{B}$ es base $\exists B_3=B_x \in \cc{B}$ con $x\in B_3 \subset B_1 \cap B_2$.
         \end{enumerate}
     \end{proof}
 \end{teo}
