--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -20,4 +20,8 @@
     \input{Ejercicios_Clase_1.tex}
     \newpage
     \input{Ejercicios_Clase_2.tex}
+    \newpage
+    \input{Ejercicios_Clase_3.tex}
+    \newpage
+    \input{Ejercicios_Clase_4.tex}
 \end{document}
