--- a/documents/_assets/portada.tex
+++ b/documents/_assets/portada.tex
@@ -12,6 +12,7 @@
 \define@key{portada}{autor}{\def\autor{#1}}
 \define@key{portada}{año}{\def\año{#1}}
 \define@key{portada}{color página}{\def\colorpagina{#1}}
+\define@key{portada}{imagen}{\def\imagen{#1}}
 
 \newcommand*{\portada}[1][]{%
   % Encabezado
@@ -24,11 +25,12 @@
     subtitulo=Sin Subtítulo,%
     autor=Autor Desconocido,%
     año=Sin Año,%
-    color página=white, #1}%
+    color página=white,%
+    imagen=Logo-UGR-Black.png, #1}%
     \begin{titlepage}
         \centering
         \pagecolor{\colorpagina} % Cambia el color de fondo de la portada
-        {\includegraphics[width=0.2\textwidth]{Logo-UGR-Black.png}\par}
+        {\includegraphics[width=0.2\textwidth]{\imagen}\par}
         \vspace{1cm}
         {\bfseries\LARGE Universidad de Granada \par}
         \vspace{1cm}
